fixed image clipping out of section

--- a/final/styles/base.css
+++ b/final/styles/base.css
@@ -98,6 +98,7 @@ section p {
 #hero-img {
     width: 100%;
 	height: 100%;
+    border-radius: 10px;
 }
 
 .hero h2 {
